# IOT-Basics

./: .gitignore  README.md  install.sh  install_uv.sh  package-lock.json  package.json  pylock.toml  pyproject.toml  requirements.txt  server.py  server.sh
Embedded/: 00_Count.py  01_Superman.py  02_blink.py  03_blink_optimize.py  04_blink_LED.py  05_blink_button.py  06_traffic_lights.py  07_interrupt.py  08_motion.py  09_weather.py  10_wifi.py  diagram.json  wokwi.toml
src/: .env.example  __init__.py  database.py  models.py  server.py
templates/: index.html
