[project]
name = "IoT"
version = "0.1.0"
authors = [
  {name = "Markus Kivinen", email = "markus.kivinen@student.lab.fi"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "fastapi[standard]>=0.116.2",
  "uvicorn[standard]>=0.35.0",
  "mpremote>=1.26.1",
  "bcrypt>=5.0.0",
]
requires-python = ">=3.13"

[project.optional-dependencies]
stubs = [
  "micropython-rp2-pico_w-stubs"
]

[project.urls]
Homepage = "https://github.com/Markus-Kivinen/IOT-Basics"

[tool.uv]
package = true

[tool.setuptools]
packages = ["src"]

[project.scripts]
server = "src.server:start_server"
dev = "src.server:start_dev_server"


# ###################################################################
# basedpyright options:
# ###################################################################

[tool.basedpyright]
ignore = ["**/typings"]
exclude = [".*", "__*", "**/typings"]

stubPath = "typings"
typeshedPath = "typings"
reportMissingModuleSource = "none"
reportUnknownMemberType = "none"
reportUnusedCallResult = "none"
reportUnusedParameter = "none"
reportUnknownVariableType = "none"
reportUnannotatedClassAttribute = "none"
reportMissingTypeStubs = "none"
reportAny = "none"
reportImplicitStringConcatenation = "none"

# ###################################################################
# ruff options:
# ###################################################################

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "T201",  # print statement found.
  "INP001",  # missing __init__ file
  "S104",  # Hardcoded binding to IP address
  "ARG001",  # Unused arguments
  "FBT003",  # Undocumented public class definition
  "D107",  # Missing docstring in __init__
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in class
  "D102",  # Missing docstring in public function
  "D103",  # Missing docstring in public method
  "D104",  # Missing docstring in public package
  "COM812", # Missing trailing comma
]

[tool.ruff]
line-length = 120